fix top bar post cat headline overlap

--- a/postManipStylesa.css
+++ b/postManipStylesa.css
@@ -49,12 +49,15 @@ padding-bottom:10px;
   display:none;
 }
 .postCatNav{
-  width:100vw;
+  width:90%;
+  min-width:880px;
   display:block;
   height:40px;
   	/*background-color: rgba(102,153,204,0.2);*/
   	margin-top:10px;
   	margin-left:20px;
+  	float:left;
+  	min-width:
   	 	
 }
 
