--- a/styleslandpagea.css
+++ b/styleslandpagea.css
@@ -124,13 +124,13 @@
 	position:absolute;
 	top:50px;
 	width:100%;
-	height:100%;
+	height:90%;
 	opacity:1;
 }
 
 #partnersmapCont .postCatContainer.map-div-overlay{
 	position:absolute;
-	width:90%;
+	width:100%;
 	height:80%;
 	float:left;
 	/*-webkit-transition:all 0.2s linear 0.5s, opacity 0.5s ease-out !important;
